--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <h2 class="section-title wow fadeInDown">
 OUR TRAINERS
 </h2>
-<p class="wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p> 
+<p class="wow fadeInDown">Все танцевать</p> 
             </div>
 			
 			 	
@@ -196,15 +196,15 @@ OUR TRAINERS
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="0ms">
                         <div class="team-img">
-                            <img class="img-responsive" src="images/team/01.jpg" alt="">
+                            <img class="img-responsive" src="images/team/БОЛЬШИЕ 1_02new.jpg" alt="">
                         </div>
                         <div class="team-info">
-                            <h3>Micky Deo</h3>
+                            <h3>Big Boss</h3>
                             <span>Founder</span> 
                         </div> 
                         <ul class="social-icons">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="twitter.com/OlegTeleginEcon"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
