--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <li class="scroll"><a href="#our-team">Trainers</a></li>
 						<li class="scroll"><a href="#portfolio">Gallery</a></li>
                         <li class="scroll"><a href="#pricing">Pricing</a></li>
-                        <li class="scroll"><a href="#contact-us">Contact</a></li>                        
+                        <li class="scroll"><a href="#contact-us">Контакты</a></li>                        
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -204,7 +204,7 @@ OUR TRAINERS
                         </div> 
                         <ul class="social-icons">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="twitter.com/OlegTeleginEcon"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.twitter.com/OlegTeleginEcon"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
