--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/Newlogo.png" alt="logo" style="width: 10%; /* Adjust this value as needed */"></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/Newlogo.png" alt="logo" style="height: 60px; /* Adjust this value as needed */"></a>
                 </div>
 				
                 <div class="collapse navbar-collapse navbar-right">
