--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			 	
             <div class="row text-center">
 		<!--    
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="0ms">
                         <div class="team-img">
                             <img class="img-responsive" src="images/team/БОЛЬШИЕ 1_02new.jpg" alt="">
@@ -213,7 +213,7 @@
                     </div>
                 </div> -->
 		    
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="100ms">
                         <div class="team-img">
                             <img class="img-responsive" src="images/team/02.jpg" alt="">
@@ -230,7 +230,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="200ms">
                         <div class="team-img">
                             <img class="img-responsive" src="images/team/03.jpg" alt="">
@@ -247,7 +247,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+		    <!-- 
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="300ms">
                         <div class="team-img">
                             <img class="img-responsive" src="images/team/04.jpg" alt="">
@@ -263,7 +264,7 @@
                             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </div>
