--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
 
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeft">
-                  <img class="img-responsive" src="images/about.png" alt="">
+                  <iframe width="100%" height="315" src="https://www.youtube.com/embed/vvSUMXU5ziU?si=tAU7f2FykzuC-cmX" frameborder="0" allowfullscreen></iframe>
+            </div>
                 </div>
 
                 <div class="col-sm-6 wow fadeInRight">
