--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-6 wow fadeInLeft">
-                  <iframe width="50%" height="315" src="https://www.youtube.com/embed/vvSUMXU5ziU?si=tAU7f2FykzuC-cmX" frameborder="0" allowfullscreen></iframe>
+                <div class="col-md-6 col-sm-6 wow fadeInLeft">
+                  <iframe width="100%" height="315" src="https://www.youtube.com/embed/vvSUMXU5ziU?si=tAU7f2FykzuC-cmX" frameborder="0" allowfullscreen></iframe>
             </div>
                 </div>
 
-                <div class="col-sm-6 wow fadeInRight">
+                <div class="col-md-6 col-sm-6 wow fadeInRight">
                     <h3 class="column-title">Our Fitness Studio</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa semper aliquam quis mattis quam. Morbi vitae tortor tempus, placerat leo et, suscipit lectus. Phasellus ut euismod massa, eu eleifend ipsum.</p>
  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa semper aliquam quis mattis quam adipiscing elit. Praesent eget risus vitae massa.</p>
