--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             <div class="row">
                 <div class="col-md-6 col-sm-6 wow fadeInLeft">
-                  <iframe width="100%" height="315" src="https://www.youtube.com/embed/vvSUMXU5ziU?si=tAU7f2FykzuC-cmX" frameborder="0" allowfullscreen></iframe>
+                  <iframe width="50" height="115" src="https://www.youtube.com/embed/vvSUMXU5ziU?si=tAU7f2FykzuC-cmX" frameborder="0" allowfullscreen></iframe>
             </div>
                 </div>
 
